--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue May 28 17:23:04 GMT-03:00 2013
+#Tue May 28 20:58:20 GMT-03:00 2013
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=api-clients.xml,api-plans.xml,api-resources-clients.xml,api-resources-plans.xml
+config.resources=api-clients.xml,api-plans.xml,api-resources-clients.xml,api-resources-plans.xml,mock.xml,rules.xml
 domain=default
